[package]
name = "cardinal-paid-claim-approver"
version = "4.6.0"
description = "Cardinal paid claim approver"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-token-manager/tree/main/programs/cardinal-paid-claim-approver"
authors = ["Jeremy Bogle <jeremy@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_paid_claim_approver"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "1.16.23"
spl-associated-token-account = "2.3.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
cardinal-token-manager = { version = "^4.6.0", path = "../cardinal-token-manager", features = ["cpi"] }
cardinal-payment-manager = { version = "^3.0.0", features = ["cpi"] }

[dev-dependencies]
proptest = { version = "1.0" }