[package]
name = "cardinal-token-manager"
version = "4.6.0"
description = "Cardinal token manager"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-token-manager/tree/main/programs/cardinal-token-manager"
authors = ["Jeremy Bogle <jeremy@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_token_manager"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "=0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
spl-associated-token-account = "=2.2.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
mpl-token-metadata = "=3.3.0"
solana-program = "=1.17.13"
#cardinal-creator-standard = { version = "^3.0.2", features = ["cpi"] }

# fix `error[E0658]: use of unstable library feature 'build_hasher_simple_hash_one'`
# cf: https://solana.stackexchange.com/questions/8800/cant-build-hello-world
ahash = "=0.8.6"

[dev-dependencies]
proptest = { version = "1.0" }

[patch.crates-io]
mpl-token-metadata = "=3.3.0"